start and end point are wired...